hw2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw2
  template:
    metadata:
      labels:
        app: hw2
    spec:
      containers:
      - name: hw2
        image: docker.io/waldemarus94/otus_ma_hw1:v1.0.0
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
